--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Free Game Checker</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+        />
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+            defer
+        ></script>
+        <script src="./assets/js/script.js" defer></script>
+    </head>
+    <body class="columns">
+        <!-- To activate Modal, add the class "is-active to the modal div. " -->
+        <section class="modal">
+            <div class="modal-background"></div>
+            <div class="modal-card">
+                <header class="modal-card-head">
+                    <p class="modal-card-title">Epic Store Free Game Checker</p>
+                    <button class="delete" aria-label="close"></button>
+                </header>
+                <section class="modal-card-body">
+                    <!-- Functionality of Website -->
+                    banana
+                </section>
+                <footer
+                    class="modal-card-foot is-flex is-justify-content-center"
+                >
+                    <button class="button modal-understand">
+                        I understand
+                    </button>
+                </footer>
+            </div>
+        </section>
+        <!-- End of Modal -->
+        <section id="side-button">
+            <button>></button>
+        </section>
+        <section class="main-content game-landing column is-6 p-0">
+            <img id="game-landing_image" class="image is-3by4 p-0" />
+            <input
+                type="text"
+                placehold="Please enter your Steam ID"
+                required
+            />
+            <button value="Search"></button>
+        </section>
+    </body>
+</html>
