HTML and Call for information page

--- a/game-information.html
+++ b/game-information.html
@@ -20,7 +20,7 @@
         <div class="game-description"></div>
         <div class="game-year"></div>
         <div class="game-genre"></div>
-        <button class="button game-link"></button>
+        <a class="game-link"><button class="button"></button></a>
     </section>
     <section class="empty-container column"></section>
 </body>
