--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         </section>
         <section class="main-content game-landing column is-6 p-0">
             <img id="game-landing_image" class="image is-3by4 p-0" />
-            <input
+            <input class="user-input"
                 type="text"
                 placehold="Please enter your Steam ID"
                 required
             />
-            <button value="Search"></button>
+            <button class= "user-submit" value="Search">Sumbit I.D.</button>
         </section>
     </body>
 </html>
