--- a/index.html
+++ b/index.html
@@ -87,17 +87,23 @@
             </div>
         </section>
         <!-- Modal-Validation -->
+        <div class="column">
         <section id="side-button">
             <button class="modal-open">></buttonclass>
         </section>
-        <section class="main-content game-landing column is-6 p-0">
+        </div>
+        <div class="column">
+        <section class="main-content game-landing column is-6 p-0 is-flex is-flex-direction-column">
             <img id="game-landing_image" class="image is-3by4 p-0" />
             <input class="user-input"
                 type="text"
-                placehold="Please enter your Steam ID"
+                placehold="Steam ID"
                 required
             />
-            <button class= "user-submit" value="Search">Sumbit I.D.</button>
+            <button class= "user-submit" value="Search">Submit</button>
+        </div>
         </section>
+        </div>
+        <div class="column"></div>
     </body>
 </html>
