--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </section>
         </div>
         <div class="column">
-        <section class="main-content game-landing column is-6 p-0 is-flex is-flex-direction-column">
+        <section class="main-content game-landing column p-0 is-flex is-flex-direction-column">
             <img id="game-landing_image" class="image is-3by4 p-0" />
             <input class="user-input"
                 type="text"
