--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <!-- Modal-Validation -->
         <div class="column">
         <section id="side-button">
-            <button class="modal-open">></buttonclass>
+            <button class="modal-open">Intructions</buttonclass>
         </section>
         </div>
         <div class="column">
