Added API call for game year and genres

--- a/game-information.html
+++ b/game-information.html
@@ -19,7 +19,7 @@
         <div class="game-name is-size-3"></div>
         <div class="game-description is-size-6"></div>
         <div class="game-year"></div>
-        <div class="game-genre"></div>
+        <ul class="game-genre">Genres:</ul>
         <a class="game-link"><button class="button">Claim game here!</button></a>
     </section>
     <section class="empty-container column"></section>
