--- a/index.html
+++ b/index.html
@@ -89,18 +89,18 @@
         <!-- Modal-Validation -->
         <div class="column">
         <section id="side-button">
-            <button class="modal-open">Intructions</buttonclass>
+            <button class="modal-open mt-3 ml-4 p-2">Intructions</buttonclass>
         </section>
         </div>
         <div class="column">
         <section class="main-content game-landing column p-0 is-flex is-flex-direction-column">
             <img id="game-landing_image" class="image is-3by4 p-0" />
-            <input class="user-input"
+            <input class="user-input mt-5"
                 type="text"
                 placehold="Steam ID"
                 required
             />
-            <button class= "user-submit" value="Search">Submit</button>
+            <button class= "user-submit mt-5 p-2" value="Search">Submit</button>
         </div>
         </section>
         </div>
