--- a/game-information.html
+++ b/game-information.html
@@ -12,7 +12,8 @@
     <script src="./assets/js/game-information.js" defer></script>
 </head>
 <body class="columns">
-    <section class="image-container column">
+    <!-- <section class="image-container column is-flex is-flex-direction-row is-justify-content-center is-align-content-center"> -->
+        <section class="image-container column">
         <image class="image image-landing"></image>
     </section>
     <section class="game column">
