--- a/game-information.html
+++ b/game-information.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Game Information</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css'>
-    <link rel="stylesheet" href="./assets/css/game-information.css">
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js' defer></script>
-    <script src="./assets/js/game-information.js" defer></script>
-</head>
-<body class="columns">
-    <!-- <section class="image-container column is-flex is-flex-direction-row is-justify-content-center is-align-content-center"> -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Free Game Information</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+        />
+        <link rel="stylesheet" href="./assets/css/game-information.css" />
+        <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+            defer
+        ></script>
+        <script src="./assets/js/game-information.js" defer></script>
+    </head>
+    <body class="columns">
+        <!-- <section class="image-container column is-flex is-flex-direction-row is-justify-content-center is-align-content-center"> -->
         <section class="image-container column">
-        <image class="image image-landing"></image>
-    </section>
-    <section class="game column">
-        <div class="game-name is-size-3"></div>
-        <div class="game-description is-size-6"></div>
-        <div class="game-year"></div>
-        <ul class="game-genre">Genres:</ul>
-        <a class="game-link"><button class="button">Claim game here!</button></a>
-    </section>
-    <section class="empty-container column"></section>
-</body>
+            <image class="image image-landing mr-5"></image>
+        </section>
+        <section class="game column">
+            <div class="game-name is-size-1 mb-3"></div>
+            <div class="game-description is-size-5 mb-2"></div>
+            <div class="game-year is-size-5 mb-2"></div>
+            <div class="game-website is-size-5 mb-2"></div>
+            <div class="game-price is-size-5 mb-2"></div>
+            <ul class="game-genre is-size-5 mb-2">
+                Genres:
+            </ul>
+            <div class="game-score is-size-5 mb-2"></div>
+            <a class="game-link"
+                ><button class="button mb-5">Claim game here!</button></a>
+                <iframe class="game-video"></iframe>
+        </section>
+        <section class="empty-container column"><div class="blank mb-5"></div></section>
+    </body>
 </html>
