--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <ol>
                         <li>Go to the <a href="https://store.steampowered.com/" target="_blank">Steam store</a></li>
                         <li>In the top right of the screen, click on your profile.<img src=".\assets\images\Modal -Go-To-Profile.png"></li>
+                        <li>Your profile settings must be set to public for this to work</li>
                         <li>On your profile page, copy the userID in the url. It's not always a number but in general the url follows this format. <img src=".\assets\images\Modal-URL-Steam-ID.png"></li>
                         <li>Input the steamID in the form at the bottom of the page</li>
                         <li>Click submit!</li>
@@ -41,7 +42,7 @@
                 <footer
                     class="modal-card-foot is-flex is-justify-content-center"
                 >
-                    <button class="button modal-understand">
+                    <button class="button modal-understand modal-button">
                         I understand
                     </button>
                 </footer>
@@ -61,7 +62,7 @@
               </section>
               <footer class="modal-card-foot">
                 <button class="button is-success continue-button">Continue</button>
-                <button class="button cancel-button">Cancel</button>
+                <button class="button cancel-button modal-button">Cancel</button>
               </footer>
             </div>
           </section>
@@ -80,7 +81,7 @@
                 <footer
                     class="modal-card-foot is-flex is-justify-content-center"
                 >
-                    <button class="button modal-try-again">
+                    <button class="button modal-try-again modal-button">
                         Try again
                     </button>
                 </footer>
