moved list in modal a bit

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h2 class="is-size-3">Welcome to our application! </h2>
                     <p>This application checks if in your Steam account, you already own the current free game on the Epic Games store.</p>
                     <h2 class="is-size-3">Instructions</h2>
-                    <ol>
+                    <ol class='ml-2'>
                         <li>Go to the <a href="https://store.steampowered.com/" target="_blank">Steam store</a></li>
                         <li>In the top right of the screen, click on your profile.<img src=".\assets\images\Modal -Go-To-Profile.png"></li>
                         <li>Your profile settings must be set to public for this to work</li>
