Buttons opens new page instead of same page

--- a/game-information.html
+++ b/game-information.html
@@ -32,8 +32,7 @@
                 Genres:
             </ul>
             <div class="game-score is-size-5 mb-2"></div>
-            <a class="game-link"
-                ><button class="button mb-5">Claim game here!</button></a>
+            <a class="game-link" target="_blank"><button class="button mb-5">Claim game here!</button></a>
                 <iframe class="game-video"></iframe>
         </section>
         <section class="empty-container column"><div class="blank mb-6"></div></section>
